# cli

./: Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/send/: mod.rs  receive_impl.rs  send_impl.rs
src/statics/: banner.txt
